--- a/public/index.ejs
+++ b/public/index.ejs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>阿里低代码引擎 Demo</title>
     <link rel="icon" href="//img.alicdn.com/imgextra/i2/O1CN01lNWGJi1xflgRfSgbk_!!6000000006471-55-tps-22-26.svg">
-    <link href="./css/index-custom.css" rel="stylesheet" />
+    <link href="./css/index.css" rel="stylesheet" />
     <!-- 低代码引擎的页面主题样式，可以替换为 theme-lowcode-dark -->
     <link href="https://alifd.alicdn.com/npm/@alifd/theme-lowcode-light@0.2.1/variables.css" rel="stylesheet" />
     <link href="https://alifd.alicdn.com/npm/@alifd/theme-lowcode-light@0.2.1/dist/next.var.min.css" rel="stylesheet" />
@@ -29,13 +29,13 @@
     <!-- Fusion Next 的主包，低代码编辑器的依赖 -->
     <script src="https://g.alicdn.com/code/lib/alifd__next/1.23.24/next.min.js"></script>
     <!-- 低代码引擎的主包 -->
-    <script crossorigin="anonymous" src="https://alifd.alicdn.com/npm/@alilc/lowcode-engine@1.0.1/dist/js/engine-core.js"></script>
+    <script crossorigin="anonymous" src="https://alifd.alicdn.com/npm/@alilc/lowcode-engine@1.0.2/dist/js/engine-core.js"></script>
     <!-- 低代码引擎官方扩展的主包 -->
-    <script crossorigin="anonymous" src="https://alifd.alicdn.com/npm/@alilc/lowcode-engine-ext@1.0.2/dist/js/engine-ext.js"></script>
+    <script crossorigin="anonymous" src="https://alifd.alicdn.com/npm/@alilc/lowcode-engine-ext@1.0.3/dist/js/engine-ext.js"></script>
   </head>
 
   <body>
     <div id="lce-container"></div>
-    <script type="text/javascript" src="./js/index-custom.js"></script>
+    <script type="text/javascript" src="./js/<%= scenario %>.js"></script>
   </body>
 </html>
