--- a/public/index.ejs
+++ b/public/index.ejs
@@ -11,9 +11,9 @@
     <link href="https://alifd.alicdn.com/npm/@alifd/theme-lowcode-light@0.2.1/variables.css" rel="stylesheet" />
     <link href="https://alifd.alicdn.com/npm/@alifd/theme-lowcode-light@0.2.1/dist/next.var.min.css" rel="stylesheet" />
     <!-- 低代码引擎的页面框架样式 -->
-    <link rel="stylesheet" href="https://alifd.alicdn.com/npm/@alilc/lowcode-engine@1.0.1/dist/css/engine-core.css" />
+    <link rel="stylesheet" href="https://alifd.alicdn.com/npm/@alilc/lowcode-engine@1.0.5/dist/css/engine-core.css" />
     <!-- 低代码引擎官方扩展的样式 -->
-    <link rel="stylesheet" href="https://alifd.alicdn.com/npm/@alilc/lowcode-engine-ext@1.0.2/dist/css/engine-ext.css" />
+    <link rel="stylesheet" href="https://alifd.alicdn.com/npm/@alilc/lowcode-engine-ext@1.0.3/dist/css/engine-ext.css" />
 
     <!-- React，可替换为 production 包 -->
     <script src="https://g.alicdn.com/code/lib/react/16.13.1/umd/react.production.min.js"></script>
@@ -29,9 +29,16 @@
     <!-- Fusion Next 的主包，低代码编辑器的依赖 -->
     <script src="https://g.alicdn.com/code/lib/alifd__next/1.23.24/next.min.js"></script>
     <!-- 低代码引擎的主包 -->
-    <script crossorigin="anonymous" src="https://alifd.alicdn.com/npm/@alilc/lowcode-engine@1.0.3/dist/js/engine-core.js"></script>
+    <script crossorigin="anonymous" src="https://alifd.alicdn.com/npm/@alilc/lowcode-engine@1.0.5/dist/js/engine-core.js"></script>
     <!-- 低代码引擎官方扩展的主包 -->
     <script crossorigin="anonymous" src="https://alifd.alicdn.com/npm/@alilc/lowcode-engine-ext@1.0.3/dist/js/engine-ext.js"></script>
+    <script>
+      console.log(
+        '%c AliLowCodeEngineDemo %c v<%= version %> ',
+        'padding: 2px 1px; border-radius: 3px 0 0 3px; color: #fff; background: #b37feb; font-weight: bold;',
+        'padding: 2px 1px; border-radius: 0 3px 3px 0; color: #fff; background: #42c02e; font-weight: bold;',
+      );
+    </script>
   </head>
 
   <body>
